# my-digest-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_digest_agent/: main.py
tests/: test_health.py
