[project]
name = "ai-digest-agent"
version = "0.1.0"
description = "Personal research digest agent: arXiv + Zotero -> cited bulletins"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Warren Joe", email = "zhourui.joe@outlook.com" }]
keywords = ["llm", "rag", "workflow", "arxiv", "zotero", "fastapi"]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "feedparser>=6.0",
  "jinja2>=3.1",
  "python-dateutil>=2.9",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",         # mock httpx in tests
  "ruff>=0.5",
  "mypy>=1.8",
  "types-python-dateutil",
  "pre-commit>=3.6",
]

[project.scripts]
digest-generate = "ai_digest_agent.cli:main"

[tool.uv]
# uv will create/use .venv by default on sync; no extra config required.

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["ai_digest_agent"]
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
